# homesens

./: .gitignore  MANIFEST.in  Pipfile  README.md  pyproject.toml  requirements.txt  setup.py  start-devel.sh  start_flask_debug.sh  start_flask_public.sh  start_with_python2.7_public.sh  system_requirements.txt
database_config/: sqlite3_create_statements.txt
homesens/: __init__.py  asist_tools.py  homesens.db  homesens.db.bak  homesens.py  homesens.py.orig  plot_collection.py  schema.sql  utils.py
homesens/static/: style.css
homesens/templates/: asist_tools.html  convert_currency.html  layout.html  login.html  show_entries.html  symbol_lookup.html
share/: source.sh
tests/: conftest.py  test_extension_api.py  test_homesens.py  test_plot_collection.py  test_websocket.py
webserver_config/: requirements.txt  restart_webserver.sh  start_info.txt  system_requirements.txt  uwsgi.ini
