[tool.poetry]
name = "homesens"
version = "0.3.0"
description = "Dashboard and management for sensors"
authors = ["Thomas Eiband"]

[tool.poetry.dependencies]
python = "^3.7.1"
plotly = "^5.18.0"
schedule = "^1.2.1"
finnhub-python = "^2.4.19"
flask = "2.2.5"
pandas = "1.1.4" # can live with old numpy version required by raspberry
Flask-BasicAuth = "^0.2.0"
numpy=="1.19.4" # required by raspberry, newer versions are not compiling

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
